feat: Add screenshot capture button to side panel

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -9,7 +9,8 @@
   "permissions": [
     "sidePanel",
     "declarativeNetRequest",
-    "declarativeNetRequestWithHostAccess"
+    "declarativeNetRequestWithHostAccess",
+    "activeTab"
   ],
   "background": {
     "service_worker": "background.js"
