--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,7 +17,8 @@ jobs:
 
       - name: Create ZIP archive
         run: |
-          zip -r side-panel-gemini-${{ github.ref_name }}.zip src -x "*.DS_Store"
+          mv src side-panel-gemini
+          zip -r side-panel-gemini-${{ github.ref_name }}.zip side-panel-gemini -x "*.DS_Store"
 
       - name: Create Release
         uses: softprops/action-gh-release@v1
