--- a/package.json
+++ b/package.json
@@ -1,27 +1,56 @@
 {
   "name": "side-panel-gemini",
-  "version": "1.0.0",
-  "description": "[English README](docs/README.en.md)",
-  "main": "index.js",
-  "directories": {
-    "doc": "docs"
-  },
+  "displayName": "Gemini Side Panel",
+  "version": "2.1.0",
+  "description": "Displays Gemini in the Chrome Side Panel.",
+  "type": "module",
+  "author": "Shalin",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc && npm run copy-assets",
-    "copy-assets": "ncp src/manifest.json dist/manifest.json && ncp src/sidepanel.html dist/sidepanel.html && ncp src/rules.json dist/rules.json && ncp src/icons dist/icons && ncp src/_metadata dist/_metadata",
-    "watch": "concurrently \"tsc -w\" \"npm run copy-assets\"",
+    "dev": "plasmo dev",
+    "build": "plasmo build",
+    "package": "plasmo package",
     "lint": "biome lint .",
     "format": "biome format --write ."
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "dependencies": {
+    "plasmo": "^0.90.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
   "devDependencies": {
     "@biomejs/biome": "^2.3.9",
-    "@types/chrome": "^0.1.32",
-    "concurrently": "^9.2.1",
-    "ncp": "^2.0.0",
-    "typescript": "^5.9.3"
+    "@types/chrome": "^0.0.258",
+    "@types/node": "^20.10.5",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.18",
+    "typescript": "^5.3.3"
+  },
+  "manifest": {
+    "host_permissions": [
+      "https://gemini.google.com/*",
+      "https://accounts.google.com/*",
+      "<all_urls>"
+    ],
+    "permissions": [
+      "sidePanel",
+      "declarativeNetRequest",
+      "declarativeNetRequestWithHostAccess",
+      "activeTab"
+    ],
+    "action": {
+      "default_title": "Open Gemini Side Panel"
+    },
+    "side_panel": {
+      "default_path": "tabs/panel.html"
+    },
+    "declarative_net_request": {
+      "rule_resources": [
+        {
+          "id": "ruleset_1",
+          "enabled": true,
+          "path": "~assets/rules.json"
+        }
+      ]
+    }
   }
 }
