fix: Add storage permission to package.json

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     ],
     "permissions": [
       "sidePanel",
+      "storage",
       "declarativeNetRequest",
       "declarativeNetRequestWithHostAccess",
       "activeTab"
