fix: Remove unused lint and format scripts from package.json

--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "dev": "plasmo dev",
     "build": "plasmo build",
     "package": "plasmo package",
-    "lint": "biome lint .",
-    "format": "biome format --write ."
+    "check": "biome check ."
   },
   "dependencies": {
     "plasmo": "^0.90.5",
