--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,13 +23,11 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Build project
-        run: npm run build
+      - name: Package extension
+        run: npm run package
 
-      - name: Create ZIP archive
-        run: |
-          mv dist side-panel-gemini
-          zip -r side-panel-gemini-${{ github.ref_name }}.zip side-panel-gemini -x "*.DS_Store"
+      - name: Rename Release Asset
+        run: mv build/chrome-mv3-prod.zip side-panel-gemini-${{ github.ref_name }}.zip
 
       - name: Create Release
         uses: softprops/action-gh-release@v1
