--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Create Release
         uses: softprops/action-gh-release@v1
         with:
-          files: mv build/chrome-mv3-prod.zip
+          files: build/chrome-mv3-prod.zip
           body_path: docs/RELEASE_BODY.md
           draft: false
           prerelease: false
